--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,31 @@ nav ul{
 }
 
 
+#profile-section{
+    height: 50vh;
+    background-color: #1B9C85;
+    width: 100%;
+}
+#profile-section a{
+    padding-right: 40px;
+    color: white;
+}
+#prfile-section i{
+    size: 50px;
+}
+
+#bottom-section{
+    background-color: #4C4C6D;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+}
+#bottom-section p{
+    color: white;
+    font-family:'Brush Script MT', cursive;
+}
+
+
 /* center elements*/
 .center-all{
     display: flex; 
